--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">mobile</string>
-    <string name="title_activity_main">mobile</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Driver</string>
+    <string name="title_activity_main">Driver</string>
+    <string name="package_name">io.gpn.driver</string>
+    <string name="custom_url_scheme">io.gpn.driver</string>
 </resources>
