--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Водитель</string>
     <string name="title_activity_main">Водитель</string>
-    <string name="package_name">io.avsv.driver</string>
-    <string name="custom_url_scheme">io.avsv.driver</string>
+    <string name="package_name">io.gpn.driver</string>
+    <string name="custom_url_scheme">io.gpn.driver</string>
 </resources>
